alignment bugs resolved

--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,13 @@
 body {
   font-family: "Quicksand", Arial, sans-serif;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.8;
   background-color: white;
   color: rgba(0, 0, 0, 0.7); }
   @media screen and (max-width: 992px) {
     body {
-      font-size: 16px; } }
+      font-size: 18px; } }
 .whatsapp{
   /* position: fixed;
   bottom: 18px;
@@ -241,7 +241,7 @@ figure {
   @media screen and (max-width: 768px) {
     #colorlib-main {
       width: 100%;
-      padding: 0 1em; } }
+      padding: 0 0; } }
 
 #colorlib-hero {
   height: 100vh;
@@ -252,7 +252,8 @@ figure {
   clear: both; }
   @media screen and (max-width: 768px) {
     #colorlib-hero {
-      padding: 0 0;
+      padding: 0;
+      margin: 0;
     }
   }
 
@@ -300,13 +301,17 @@ figure {
     #colorlib-hero .flexslider .flex-direction-nav {
       display: none; } */
     #colorlib-hero .flexslider .slider-text {
-      display: table;
+      display: block;
       opacity: 0;
-      min-height: 500px;
+      height: 100vh;
       z-index: 9; }
       #colorlib-hero .flexslider .slider-text > .slider-text-inner {
-        display: table-cell;
-        vertical-align: middle;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: auto;
+        /* margin-top: 17vh; */
+        align-items: center;
         text-align: left;
         min-height: 700px;
         padding: 2.5em;
@@ -467,8 +472,8 @@ body.offcanvas {
     .colorlib-about,
     .colorlib-services,
     .colorlib-contact {
-      padding-top: 2em;
-      padding-bottom: 2em; } }
+      padding: 2em 1em 2em 1em;
+    } }
 
 .author-img {
   background-size: cover;
